{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 32,
  "lineage": "bf45d423-e5c5-f2b7-29e2-f6310f8f068f",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06c6cb211645127cf",
            "public_dns": "ec2-52-70-176-134.compute-1.amazonaws.com",
            "public_ip": "52.70.176.134",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08ad349ab46204250",
            "public_dns": "ec2-3-212-177-52.compute-1.amazonaws.com",
            "public_ip": "3.212.177.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0043ce6c8eddc811e",
            "public_dns": "ec2-34-196-7-222.compute-1.amazonaws.com",
            "public_ip": "34.196.7.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05f5c55fbc881c8f3",
            "owner_id": "791382328408",
            "tags": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c6cb211645127cf",
            "id": "nat-0586c9e123ffb412a",
            "network_interface_id": "eni-074d69b8d593233d7",
            "private_ip": "10.0.10.190",
            "public_ip": "52.70.176.134",
            "subnet_id": "subnet-0c8200c1e27fa0883",
            "tags": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ad349ab46204250",
            "id": "nat-09221c27353af362f",
            "network_interface_id": "eni-0e41ab80b68381388",
            "private_ip": "10.0.11.144",
            "public_ip": "3.212.177.52",
            "subnet_id": "subnet-0fc9dd5c0470d91ef",
            "tags": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0043ce6c8eddc811e",
            "id": "nat-0b1e5ad117dd6c4e8",
            "network_interface_id": "eni-026409688cccf7015",
            "private_ip": "10.0.12.166",
            "public_ip": "34.196.7.222",
            "subnet_id": "subnet-0b35e08addfdd54c2",
            "tags": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "application",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-063b8b2edf90856b4",
            "owner_id": "791382328408",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0586c9e123ffb412a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example_application"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_nat_gateway.example",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-022648b37750ad9fb",
            "owner_id": "791382328408",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-09221c27353af362f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example_application"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_nat_gateway.example",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0696cf45e76c6d0b0",
            "owner_id": "791382328408",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b1e5ad117dd6c4e8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example_application"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_nat_gateway.example",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07ffca49cfe4b4218",
            "owner_id": "791382328408",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example_database"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fdd9a3f802859b72",
            "owner_id": "791382328408",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f5c55fbc881c8f3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example_gateway"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.example",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "application",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a31dc6e31fccc4b5",
            "route_table_id": "rtb-063b8b2edf90856b4",
            "subnet_id": "subnet-0aa5a20eb68455368"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_nat_gateway.example",
            "module.network.aws_route_table.application",
            "module.network.aws_subnet.application",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fa8eab2b8de91f5",
            "route_table_id": "rtb-022648b37750ad9fb",
            "subnet_id": "subnet-01b6dd0fef3aac82a"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_nat_gateway.example",
            "module.network.aws_route_table.application",
            "module.network.aws_subnet.application",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f562274ec551c4b",
            "route_table_id": "rtb-0696cf45e76c6d0b0",
            "subnet_id": "subnet-0b288e6357c83c546"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.example",
            "module.network.aws_nat_gateway.example",
            "module.network.aws_route_table.application",
            "module.network.aws_subnet.application",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09251313acb9faaaa",
            "route_table_id": "rtb-07ffca49cfe4b4218",
            "subnet_id": "subnet-087f4db7169dfd683"
          },
          "dependencies": [
            "module.network.aws_route_table.database",
            "module.network.aws_subnet.database",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0553712a004825927",
            "route_table_id": "rtb-07ffca49cfe4b4218",
            "subnet_id": "subnet-076abfddee8949d29"
          },
          "dependencies": [
            "module.network.aws_route_table.database",
            "module.network.aws_subnet.database",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b93731235d7695a",
            "route_table_id": "rtb-07ffca49cfe4b4218",
            "subnet_id": "subnet-010a4513d7cb632d5"
          },
          "dependencies": [
            "module.network.aws_route_table.database",
            "module.network.aws_subnet.database",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fab5154ecdd0b219",
            "route_table_id": "rtb-0fdd9a3f802859b72",
            "subnet_id": "subnet-0c8200c1e27fa0883"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.example",
            "module.network.aws_route_table.gateway",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b08512ea1286c0ec",
            "route_table_id": "rtb-0fdd9a3f802859b72",
            "subnet_id": "subnet-0fc9dd5c0470d91ef"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.example",
            "module.network.aws_route_table.gateway",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8563d0a34b892b7",
            "route_table_id": "rtb-0fdd9a3f802859b72",
            "subnet_id": "subnet-0b35e08addfdd54c2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.example",
            "module.network.aws_route_table.gateway",
            "module.network.aws_subnet.gateway",
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:subnet/subnet-0aa5a20eb68455368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0aa5a20eb68455368",
            "map_public_ip_on_launch": false,
            "owner_id": "791382328408",
            "tags": {
              "Name": "example_application",
              "kubernetes.io/cluster/example": "shared"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:subnet/subnet-01b6dd0fef3aac82a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-01b6dd0fef3aac82a",
            "map_public_ip_on_launch": false,
            "owner_id": "791382328408",
            "tags": {
              "Name": "example_application",
              "kubernetes.io/cluster/example": "shared"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:subnet/subnet-0b288e6357c83c546",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-0b288e6357c83c546",
            "map_public_ip_on_launch": false,
            "owner_id": "791382328408",
            "tags": {
              "Name": "example_application",
              "kubernetes.io/cluster/example": "shared"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:subnet/subnet-087f4db7169dfd683",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-087f4db7169dfd683",
            "map_public_ip_on_launch": false,
            "owner_id": "791382328408",
            "tags": {
              "Name": "example_database"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:subnet/subnet-076abfddee8949d29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.31.0/24",
            "id": "subnet-076abfddee8949d29",
            "map_public_ip_on_launch": false,
            "owner_id": "791382328408",
            "tags": {
              "Name": "example_database"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:subnet/subnet-010a4513d7cb632d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/24",
            "id": "subnet-010a4513d7cb632d5",
            "map_public_ip_on_launch": false,
            "owner_id": "791382328408",
            "tags": {
              "Name": "example_database"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:subnet/subnet-0c8200c1e27fa0883",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0c8200c1e27fa0883",
            "map_public_ip_on_launch": false,
            "owner_id": "791382328408",
            "tags": {
              "Name": "example_gateway"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:subnet/subnet-0fc9dd5c0470d91ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0fc9dd5c0470d91ef",
            "map_public_ip_on_launch": false,
            "owner_id": "791382328408",
            "tags": {
              "Name": "example_gateway"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:subnet/subnet-0b35e08addfdd54c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0b35e08addfdd54c2",
            "map_public_ip_on_launch": false,
            "owner_id": "791382328408",
            "tags": {
              "Name": "example_gateway"
            },
            "vpc_id": "vpc-0562a3d12df513373"
          },
          "dependencies": [
            "module.network.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:791382328408:vpc/vpc-0562a3d12df513373",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d663f7853eeffc1a",
            "default_route_table_id": "rtb-060d5cee930bf94e9",
            "default_security_group_id": "sg-002bc5e3607612315",
            "dhcp_options_id": "dopt-ff8a5585",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0562a3d12df513373",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-060d5cee930bf94e9",
            "owner_id": "791382328408",
            "tags": {
              "Name": "terraform-eks",
              "kubernetes.io/cluster/example": "shared"
            }
          }
        }
      ]
    }
  ]
}